Unorthodox changes to get UWP head to build
 - remove dependence on Graph package - it was depending on the published NuGet versions of the toolkit dlls, which was causing duplicate-reference errors
 - reference shared proj - otherwise .bind and other resources files not found (not marked as EmbeddedResource)
 - set locally-installed .NET Core version

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/LoginButton/LoginButtonPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/LoginButton/LoginButtonPage.xaml
@@ -8,12 +8,12 @@
       xmlns:providers="using:Microsoft.Toolkit.Graph.Providers"
       mc:Ignorable="d">
 
-    <Interactivity:Interaction.Behaviors>
+    <!--<Interactivity:Interaction.Behaviors>
         <providers:MockProviderBehavior SignedIn="False"/>
-    </Interactivity:Interaction.Behaviors>
+    </Interactivity:Interaction.Behaviors>-->
     
     <!-- Shallow Copy -->
     <Grid>
-        <wgt:LoginButton/>
+        <!--<wgt:LoginButton/>-->
     </Grid>
 </Page>
