--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/PeoplePicker/PeoplePickerPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/PeoplePicker/PeoplePickerPage.xaml
@@ -11,6 +11,6 @@
     </Page.Resources>
     <!-- Shallow Copy -->
     <Grid>
-        <wgt:PeoplePicker/>
+        <!--<wgt:PeoplePicker/>-->
     </Grid>
 </Page>
