--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/PersonView/PersonViewPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/PersonView/PersonViewPage.xaml
@@ -7,6 +7,6 @@
       mc:Ignorable="d">
     <!-- Shallow Copy -->
     <Grid>
-        <wgt:PersonView/>
+        <!--<wgt:PersonView/>-->
     </Grid>
 </Page>
